--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,49 @@
-.container {
-  display: flex;
-  flex-direction: column;
-}
+body {
+  background: #4903c9;
+  background: -webkit-linear-gradient(to right, #2ebf91, #4903c9);
+  background: linear-gradient(to right, #2ebf91, #4903c9);
+  font-family: 'Barlow', sans-serif;
+  }
+
+
+  .heading {
+    background-color: rgb(250, 250, 250);
+    text-align: center;
+    margin: 2rem 0;
+    font-weight: 500;
+    height: 3.5rem;
+    padding: 0.25rem;
+  }
+
+  form {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .task-input {
+    width: 100%;
+    border-radius: 10px;
+    height: 2.5rem;
+    margin-bottom: 1rem;
+  }
+  
+  .item {
+    list-style-type: none;
+    margin: 1rem;
+    background-color: #ffffff;
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 10px;
+    height: 2.5rem;
+  }
+
+  .task-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  
